# Skill-Balancer-Server

./: .env.example  .gitignore  Cargo.toml  README.md  bacon.toml  mise.toml
.github/workflows/: build_binaries.yml  ci.yml  linux_build.yml  mac_build.yml  windows_build.yml
bruno/: opencollection.yml
bruno/Config/: Step.yml  config setup.yml  folder.yml  list all configs.yml
bruno/Model/: folder.yml
bruno/Model/Checkpoint/: Create checkpoint.yml  Download checkpoint.yml  List all checkpoints.yml  Load checkpoint.yml  folder.yml
bruno/Model/Export/: Create export.yml  Download export.yml  List all exports.yml
bruno/Model/Save/: Create save.yml  Download save.yml  List all saves.yml  Load save.yml  folder.yml
bruno/environments/: general.yml
burn-rl/: Cargo.toml
burn-rl/src/: lib.rs
burn-rl/src/agent/: mod.rs
burn-rl/src/agent/ppo/: agent.rs  config.rs
burn-rl/src/base/: action.rs  agent.rs  environment.rs  memory.rs  state.rs
burn-rl/src/utils/: mod.rs
migrations/: 20260216193241_Game.sql
src/: config.rs  main.rs  profile.rs
src/database/: config.rs  mod.rs
src/entities/: config.rs
src/env/: mod.rs
src/models/: action.rs  apiError.rs  createTransitionResponse.rs  environment.rs  game.rs  metrics.rs  mod.rs  ppo.rs  profile.rs  state.rs  transition.rs
src/network/: app_state.rs  mod.rs  profile.rs  transition.rs
src/routes/: all_config_route.rs  config_route.rs  mod.rs  model.rs  root.rs  save_model.rs  sse.rs  step_route.rs
src/routes/model/: checkpoint.rs  export.rs  list_checkpoints.rs  list_exports.rs  list_saves.rs  load.rs  mod.rs  save.rs
src/storage/: db.rs  mod.rs  model.rs  save_model.rs  utils.rs
src/templates/: actions.html  base.html  card.html  cards.html  chart.html  charts.html  dashboard.html  dashboard_cards.html  dashboard_charts.html  live.html  root.htm.bakl  root.html  sse.html
src/tests/: mod.rs  ppo_train_test.rs
src/utils/: validation.rs
src/validation/: mod.rs  strict_float.rs
