[workspace]
members = [".", "burn-rl"]

[workspace.dependencies]
burn = { version = "0.20", features = ["ndarray", "autodiff"] }
serde = { version = "1.0", features = ["derive"] }

[package]
name = "Data-Collection-Rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bacon = "3.22.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
burn-rl = { path = "burn-rl" }
burn = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
askama = "0.15.4"
