[workspace]
members = [".", "burn-rl"]

[workspace.dependencies]
burn = { version = "0.20.1", default-features = false, features = [
    "ndarray",
    "autodiff",
] }
serde = { version = "1.0", features = ["derive"] }

[package]
name = "Skill-Balancer-Server"
version = "1.0.0"
edition = "2024"


[dependencies]
ringbuffer = "0.15.0"
burn-rl = { path = "burn-rl" }
axum = "0.8.8"
bacon = "3.22.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
burn = { workspace = true, features = ["wgpu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.15.4"
tower-http = { version = "0.6.8", features = ["fs"] }
burn-store = "0.20.1"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
    "schema-sync",
    "entity-registry",
] }
rand = "0.8.5"
colored = "3.1.1"
num = "0.4.3"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
